fixed overflow

--- a/css/technical-documentation.css
+++ b/css/technical-documentation.css
@@ -3,7 +3,9 @@
     padding: 0;
     margin: 0;
 }
-
+html{
+    overflow-x: hidden;
+}
 body {
     font-family: 'Georama', sans-serif;
     overflow-x: hidden;
